--- a/angular.json
+++ b/angular.json
@@ -16,22 +16,21 @@
             "outputPath": "dist/finalsv13",
             "index": "src/index.html",
             "browser": "src/main.ts",
-            "polyfills": [
-              "zone.js"
+            "polyfills": ["zone.js"],
+            "assets": [
+              {
+                "glob": "**/*",
+                "input": "src/assets",
+                "output": "assets"
+              }
             ],
-            "tsConfig": "tsconfig.app.json",
-             "assets": [
-    {
-      "glob": "**/*",
-      "input": "src/assets"
-    }
-  ],
             "styles": [
               "node_modules/bootstrap-icons/font/bootstrap-icons.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": [],
+            "tsConfig": "tsconfig.app.json",
             "server": "src/main.server.ts",
             "outputMode": "server",
             "ssr": {
@@ -80,15 +79,13 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "polyfills": [
-              "zone.js",
-              "zone.js/testing"
-            ],
+            "polyfills": ["zone.js", "zone.js/testing"],
             "tsConfig": "tsconfig.spec.json",
             "assets": [
               {
                 "glob": "**/*",
-                "input": "public"
+                "input": "src/assets",
+                "output": "assets"
               }
             ],
             "styles": [
